--- a/coindox/package.json
+++ b/coindox/package.json
@@ -13,7 +13,8 @@
     "@hookform/resolvers": "^3.3.4",
     "bootstrap": "^5.3.3",
     "next": "14.1.4",
-    "react": "^18",
+    "papaparse": "^5.5.2",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.1",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "18.3.19",
     "@types/react-dom": "^18",
     "eslint": "^8",
