--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.3.3",
     "@hookform/resolvers": "^3.3.4",
     "bootstrap": "^5.3.3",
+    "ethers": "^6.13.5",
     "next": "14.1.4",
     "papaparse": "^5.5.2",
     "react": "^18.3.1",
